# circle-coupe

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  update-eeprom.sh
.beads/: metadata.json
cmake/: circle-toolchain-pi2.cmake  circle-toolchain-pi4.cmake  circle-toolchain.cmake  sdl3-circle-options.cmake
kernel/: CMakeLists.txt  Makefile  kernel.cpp  kernel.h  main.cpp  syscalls.c
kernel/sdcard/: config.txt
scripts/: patch-sdl3.sh
simcoupe/: .gitignore  CMakeLists.txt  Makefile  circle_dir.h  config.h.in  kernel.cpp  kernel.h  linux_multicore_fix.cpp  main.cpp  posix_stubs.cpp  syscalls.c
simcoupe/Base/: CPU.cpp  FatFsFile.h  Frame.cpp  FrameBufferBackup.cpp  FrameBufferBackup.h  GUI.cpp  GUI.h  GUIDlg.cpp  GUIIcons.cpp  GUIIcons.h  Keyboard.cpp  Main.cpp  Options.h  SAMIO.cpp  SimCoupe.h  Sound.cpp  Sound.h  Util.cpp  Util.h  Video.cpp
simcoupe/Circle/: Audio.cpp  Input.cpp  OSD.cpp  Stubs.cpp  UI.cpp  VCHIQSound.cpp  VCHIQSound.h  Video.cpp
simcoupe/SDL/: Audio.cpp  Input.cpp  Input.h  MIDI.cpp  OSD.cpp  OSD.h  SDL20.cpp  SDL20.h  UI.cpp
simcoupe/cmake/: FindSDL2.cmake
simcoupe/resid-src/: wave.h  wave6581_PST.cc  wave6581_PS_.cc  wave6581_P_T.cc  wave6581__ST.cc  wave8580_PST.cc  wave8580_PS_.cc  wave8580_P_T.cc  wave8580__ST.cc
simcoupe/sdcard/: README.txt  config.txt
src/: CMakeLists.txt  SDL_iostream_circle.c  SDL_memset4_circle.c  circle_posix_compat.h  fatfs_posix.cpp  fatfs_posix.h
src/audio/: CMakeLists.txt  SDL_audio_circle.c
src/audio/circle/: SDL_circleaudio.c  SDL_circleaudio_impl.cpp
src/events/circle/: SDL_circleevents.c  SDL_circleevents_impl.cpp
src/filesystem/: CMakeLists.txt
src/filesystem/circle/: SDL_circlefs.c
src/include/: SDL_build_config.h  dirent.h
src/misc/: CMakeLists.txt
src/misc/circle/: SDL_circlemisc.c
src/thread/: CMakeLists.txt
src/thread/circle/: SDL_circlethread.c
src/time/circle/: SDL_circlesystime.c
src/timer/: CMakeLists.txt
src/timer/circle/: SDL_circletimer.c  SDL_circletimer_impl.cpp
src/video/: CMakeLists.txt  SDL_video_circle.c
src/video/circle/: SDL_circlefb.cpp  SDL_circlevideo.c  SDL_circlevideo.h
test/: CMakeCache.txt
